Handle missing value exception when no tests are run